<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    tools:context=".presentation.center.MaintenanceCenterRegisterationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#50000000"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:background="@null"
            android:src="@drawable/ic_back_black"
            android:tint="@color/black" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/register_as_maintenance_center"
            android:textSize="18sp" />

        <!--        Name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/full_name"
            app:boxBackgroundMode="none"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPersonName"
                android:background="@drawable/corner_light_white"
                android:gravity="center_vertical"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Phone-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/phone"
            app:boxBackgroundMode="none"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="phone"
                android:background="@drawable/corner_light_white"
                android:gravity="center_vertical"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email"
            app:boxBackgroundMode="none"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/corner_light_white"
                android:gravity="center_vertical"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:textColor="@color/colorPrimary"
                android:inputType="textPassword"
                android:background="@drawable/corner_light_white"
                android:gravity="bottom"
                android:textAlignment="viewStart"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Confirm Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:textColor="@color/colorPrimary"
                android:inputType="textPassword"
                android:background="@drawable/corner_light_white"
                android:gravity="bottom"
                android:textAlignment="viewStart"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Region-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/region"
            app:boxBackgroundMode="none"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRegion"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/corner_light_white"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Category-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="-8dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/category"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/categoriesSpinner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:background="@drawable/border_spinner" />
        </LinearLayout>

        <!--        Category Name-->
        <LinearLayout
            android:id="@+id/categoryNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="-8dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputCategoryName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/categoryName"
                app:boxBackgroundMode="none"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCategoryName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/corner_light_white"
                    android:gravity="center_vertical"
                    android:inputType="textPersonName"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!--        Location-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/location_lbl"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="@string/lang"
                app:boxBackgroundMode="none"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLang"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/corner_light_white"
                    android:gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/latitude"
                app:boxBackgroundMode="none"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLat"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/corner_light_white"
                    android:gravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/cornered_primary_bg_fill"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>