<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg2"
    tools:context=".presentation.client.RepairCarHomeActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <RelativeLayout
                android:id="@+id/maintenanceListView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/colorPrimaryDarkLowOpacity"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/maintenance_car_list"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/squada_one"
                    android:text="Maintenance Shop List"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/white"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/searchMaintenanceView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="#50ffffff"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/searchImageView"
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:src="@drawable/search_maintenance_shop"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"/>

                <!--        Category-->
                <LinearLayout
                    android:id="@+id/categoryView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/searchImageView"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/category"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/categoriesSpinner"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="2"
                        android:background="@drawable/border_spinner" />
                </LinearLayout>

                <!--        Service-->
                <LinearLayout
                    android:id="@+id/servicesView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/categoryView"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/service"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/servicesSpinner"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="2"
                        android:background="@drawable/border_spinner" />
                </LinearLayout>

                <Button
                    android:id="@+id/searchMaintenanceBtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/servicesView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/cornered_primary_bg_fill"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/search_maintenance_center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/repairRequestView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="#50000000">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignParentTop="true"
                    android:background="@color/white"/>

                <ImageView
                    android:id="@+id/repairRequestImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/car_services"
                    android:layout_centerHorizontal="true"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneInputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_below="@id/repairRequestImageView"
                    android:hint="@string/phone_number"
                    app:boxBackgroundMode="none"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPersonName"
                        android:background="@drawable/corner_light_white"
                        android:gravity="center_vertical"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/repairRequestBtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/phoneInputName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/cornered_primary_bg_fill"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="My Repair Request"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:src="@drawable/ic_back_black" />

    </FrameLayout>

</LinearLayout>